hotfix(post/list): Fix title :wrench:

--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -236,12 +236,12 @@
                     </span>
                 </div>
                 <div class="col-md-4 d-flex justify-content-end icons-footer">
-                    <a href="https://www.facebook.com/Legado-do-Frei-Rui-Depin%C3%A9-101772318808572/"
+                    <a aria-label="Facebook do Legado" href="https://www.facebook.com/Legado-do-Frei-Rui-Depin%C3%A9-101772318808572/"
                         class="btn btn-outline">
                         <i aria-hidden="true" class="fab fa-facebook" style="color: #2264ac" title="Facebook"></i>
                     </a>
 
-                    <a href="https://www.youtube.com/channel/UCNC-pWwv7UpVAOZ9nBH7-HA" class="btn btn-outline ml-2">
+                    <a aria-label="YouTube do Legado" href="https://www.youtube.com/channel/UCNC-pWwv7UpVAOZ9nBH7-HA" class="btn btn-outline ml-2">
                         <i aria-hidden="true" class="fab fa-youtube" style="color: #2264ac" title="youtube"></i>
                     </a>
                 </div>
