hotfix(encoding): Attempt fix :hammer:

--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -102,7 +102,7 @@
             setSelectedLanguage();
         };
     </script>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -116,7 +116,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <div class="text-bg" style="margin-left: 5px;">
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand d-block" href="/">
                         <img src="{% static 'logo.webp' %}" width="170" height="170" alt="contornos do Frei Rui">
                     </a>
                     {% if user.is_authenticated %}
