--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -4,29 +4,43 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Google keeps breaking SRI hashes, so I removed it -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" />
+    {% if user.is_authenticated %}
+    <!-- We load more bloated stylesheets (SEO isn't important authenticated) -->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS?display=swap"
+        crossorigin="anonymous" media="print" onload="this.media='all'">
+ 
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <noscript>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     </noscript>
-    <!-- Google keeps breaking SRI hashes, so I removed it -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" />
-    {% if user.is_authenticated %}
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
-        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS?display=swap"
-        crossorigin="anonymous" media="print" onload="this.media='all'">
-    {% else %}
-    <link rel="stylesheet" href="{% static 'fontawesome.css' %}">
-    {% endif %}
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+
     <link rel="preload" href="{% static 'style.css' %}" as="style" onload="this.onload=null;this.rel='stylesheet'" />
     <noscript>
         <link rel="stylesheet" href="{% static 'style.css' %}">
     </noscript>
+    {% else %}
+    <!-- load lighter stylesheets for SEO -->
+
+    <link rel="stylesheet" href="{% static 'purified_css/fontawesome.css' %}">
+    <link rel="preload" href="{% static 'purified_css/bootstrap.css' %}" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript>
+        <link rel="stylesheet" href="{% static 'purified_css/bootstrap.css' %}">
+    </noscript>
+    <link rel="preload" href="{% static 'purified_css/styles.css' %}" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript>
+        <link rel="stylesheet" href="{% static 'purified_css/styles.css' %}">
+    </noscript>
+    {% endif %}
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
 
     <!-- whatsapp-->
